--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <!-- custom styles -->
         <link rel="stylesheet" href="styles.css" >
 
+         <!-- firebase related files -->
+         <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+         <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+         <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-firestore.js"></script>
+
+         <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyBpLfgy4hsdCRnwcmDp98KVy13TfJQJZ-c",
+            authDomain: "employees-4e6bd.firebaseapp.com",
+            databaseURL: "https://employees-4e6bd.firebaseio.com",
+            projectId: "employees-4e6bd",
+            storageBucket: "employees-4e6bd.appspot.com",
+            messagingSenderId: "1014321559473"
+          };
+          firebase.initializeApp(config);
+        </script>
+
         <!-- initialize script -->
         <script src="initialize.js"></script>
         <!-- filtering scripts -->
