update firebase credentials

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
          <script>
           // Initialize Firebase
+          // Get these values from your firebase account
           var config = {
-            apiKey: "AIzaSyBpLfgy4hsdCRnwcmDp98KVy13TfJQJZ-c",
-            authDomain: "employees-4e6bd.firebaseapp.com",
-            databaseURL: "https://employees-4e6bd.firebaseio.com",
-            projectId: "employees-4e6bd",
-            storageBucket: "employees-4e6bd.appspot.com",
-            messagingSenderId: "1014321559473"
+            apiKey: "your-api-key",
+            authDomain: "get this from firbase",
+            databaseURL: "your firebase database URL",
+            projectId: "lorem-ipsum",
+            storageBucket: "dolor-lesit",
+            messagingSenderId: "blablabla"
           };
           firebase.initializeApp(config);
         </script>
